Removed some stuff
